[gd_scene load_steps=7 format=3 uid="uid://df17ea4uupv2g"]

[ext_resource type="PackedScene" uid="uid://cg5ocn013f364" path="res://scenes/projectile.tscn" id="1_mx4h7"]
[ext_resource type="Script" uid="uid://dtuwhjl0j5xe0" path="res://projectile_self_free.gd" id="2_g4h2j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dufb6"]
size = Vector2(215, 56)

[sub_resource type="Animation" id="Animation_dacta"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6aq50"]
resource_name = "fading"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_32axa"]
_data = {
&"RESET": SubResource("Animation_dacta"),
&"fading": SubResource("Animation_6aq50")
}

[node name="Projectile" instance=ExtResource("1_mx4h7")]
script = ExtResource("2_g4h2j")

[node name="Sprite2D" parent="." index="0"]
position = Vector2(72, 0)

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(107.5, 0)
shape = SubResource("RectangleShape2D_dufb6")

[node name="Lifetime" type="Timer" parent="." index="3"]
wait_time = 0.3
one_shot = true
autostart = true

[node name="PreLifetime" type="Timer" parent="." index="4"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="5"]
libraries = {
&"": SubResource("AnimationLibrary_32axa")
}

[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
[connection signal="timeout" from="PreLifetime" to="." method="_on_pre_lifetime_timeout"]
